addition of styling

--- a/src/components/Cart/CartButton.module.css
+++ b/src/components/Cart/CartButton.module.css
@@ -10,7 +10,7 @@
 }
 
 .button span {
-  margin: 0 0.5rem;
+  margin:  0.5rem;
 }
 
 .badge {
@@ -18,4 +18,16 @@
   border-radius: 30px;
   padding: 0.15rem 1.25rem;
   color: #1d1d1d;
+}
+
+@media only screen and (max-width: 768px) {
+  .button span {
+    margin: 0 ;
+    padding: 5px;
+  }
+
+  .badge {
+    border-radius: 2rem;
+  }
+  
 }
