--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,13 @@
 
 html {
   font-family: 'Noto Sans JP', sans-serif;
+  overflow: hidden;
 }
 
 body {
   margin: 0;
   background-color: #3f3f3f;
+  overflow: hidden;
 }
 
 button {
